// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'combine simple values without affecti…' > renders expected table > combine simple values without affecting object values 1`] = `
{
  "input": {
    "weather": [
      {
        "description": "clear sky",
        "icon": "01n",
        "id": 800,
        "main": "Clear",
      },
    ],
  },
  "view": "
+---+-----------------------------------+
|   |              weather              |
| # +------+-------+-------------+------+
|   |  id  | main  | description | icon |
+---+------+-------+-------------+------+
| 1 |  800 | Clear | clear sky   | 01n  |
+---+------+-------+-------------+------+",
}
`;

exports[`'create correct tree' > renders expected table > create correct tree 1`] = `
{
  "input": [
    {
      "options": {
        "reduceOptions": {
          "values": false,
        },
      },
      "pluginVersion": "7.3.1",
      "targets": [
        {
          "expr": "loki_build_info",
          "format": "table",
        },
      ],
    },
    {
      "options": {
        "reduceOptions": {
          "values": false,
        },
      },
      "pluginVersion": "7.3.1",
      "targets": [
        {
          "expr": "sum(log_messages_total)",
        },
      ],
    },
  ],
  "view": "
+---+---------------+---------------+------+--------------------------------+
|   |    options    |               |      |                                |
|   +---------------+               |      |                                |
| # | reduceOptions | pluginVersion |  #   |            targets             |
|   +---------------+               |      |                                |
|   |    values     |               |      |                                |
+---+---------------+---------------+------+--------------------------------+
|   |               |               | expr |             format             |
| 1 | false         | 7.3.1         +------+------------------------+-------+
|   |               |               |  1   | loki_build_info        | table |
+---+---------------+---------------+------+------------------------+-------+
|   |               |               |                 expr                  |
| 2 | false         | 7.3.1         +------+--------------------------------+
|   |               |               |  1   | sum(log_messages_total)        |
+---+---------------+---------------+------+--------------------------------+",
}
`;

exports[`'create tree for arrays with indexes c…' > renders expected table > create tree for arrays with indexes collapse 1`] = `
{
  "input": [
    [
      1,
      2,
    ],
    [
      11,
      22,
    ],
  ],
  "view": "
+-----+----+
| 1.1 |  1 |
+-----+----+
| 1.2 |  2 |
+-----+----+
| 2.1 | 11 |
+-----+----+
| 2.2 | 22 |
+-----+----+",
}
`;

exports[`'create tree for arrays' > renders expected table > create tree for arrays 1`] = `
{
  "input": [
    1,
    2,
    [
      11,
      22,
    ],
  ],
  "view": "
+---+--------+
| 1 |      1 |
+---+--------+
| 2 |      2 |
+---+---+----+
|   | 1 | 11 |
| 3 +---+----+
|   | 2 | 22 |
+---+---+----+",
}
`;

exports[`'create tree for objects' > renders expected table > create tree for objects 1`] = `
{
  "input": {
    "a": 1,
    "b": 2,
    "c": {
      "aa": 11,
      "bb": 22,
    },
  },
  "view": "
+---+---+---------+
| a | b |    c    |
+---+---+----+----+
|   |   | aa | bb |
| 1 | 2 +----+----+
|   |   | 11 | 22 |
+---+---+----+----+",
}
`;

exports[`'deduplicate headers with format in bo…' > renders expected table > deduplicate headers with format in both items 1`] = `
{
  "input": [
    {
      "options": {
        "reduceOptions": {
          "values": false,
        },
      },
      "pluginVersion": "7.3.1",
      "targets": [
        {
          "expr": "loki_build_info",
          "format": "table",
        },
      ],
    },
    {
      "options": {
        "reduceOptions": {
          "values": false,
        },
      },
      "pluginVersion": "7.3.2",
      "targets": [
        {
          "expr": "sum_messages",
          "format": "json",
        },
      ],
    },
  ],
  "view": "
+---+---------------+---------------+---+--------------------------+
|   |    options    |               |   |         targets          |
|   +---------------+               |   +-----------------+--------+
| # | reduceOptions | pluginVersion | # |                 |        |
|   +---------------+               |   |      expr       | format |
|   |    values     |               |   |                 |        |
+---+---------------+---------------+---+-----------------+--------+
| 1 | false         | 7.3.1         | 1 | loki_build_info | table  |
+---+---------------+---------------+---+-----------------+--------+
| 2 | false         | 7.3.2         | 1 | sum_messages    | json   |
+---+---------------+---------------+---+-----------------+--------+",
}
`;

exports[`'deduplicate multiline tree headers' > renders expected table > deduplicate multiline tree headers 1`] = `
{
  "input": [
    {
      "a": {
        "x": 1,
      },
      "b": {
        "y": 2,
      },
    },
    {
      "a": {
        "x": 3,
      },
      "b": {
        "y": 4,
      },
    },
  ],
  "view": "
+---+---+---+
|   | a | b |
| # +---+---+
|   | x | y |
+---+---+---+
| 1 | 1 | 2 |
+---+---+---+
| 2 | 3 | 4 |
+---+---+---+",
}
`;

exports[`'deduplicate tree headers' > renders expected table > deduplicate tree headers 1`] = `
{
  "input": [
    {
      "a": 1,
      "b": 2,
      "c": 3,
    },
    {
      "a": 4,
      "b": 5,
      "c": 6,
    },
    {
      "a": 7,
      "b": 8,
      "c": 9,
    },
  ],
  "view": "
+---+---+---+---+
| # | a | b | c |
+---+---+---+---+
| 1 | 1 | 2 | 3 |
+---+---+---+---+
| 2 | 4 | 5 | 6 |
+---+---+---+---+
| 3 | 7 | 8 | 9 |
+---+---+---+---+",
}
`;

exports[`'deduplicate tree indexes' > renders expected table > deduplicate tree indexes 1`] = `
{
  "input": {
    "a": [
      1,
      4,
      7,
    ],
    "b": [
      2,
      5,
      8,
    ],
    "c": [
      3,
      6,
      9,
    ],
  },
  "view": "
+---+---+---+---+
| # | a | b | c |
+---+---+---+---+
| 1 | 1 | 2 | 3 |
+---+---+---+---+
| 2 | 4 | 5 | 6 |
+---+---+---+---+
| 3 | 7 | 8 | 9 |
+---+---+---+---+",
}
`;

exports[`'fully deduplicate common headers' > renders expected table > fully deduplicate common headers 1`] = `
{
  "input": [
    {
      "a": 1,
      "b": {
        "c": 1,
      },
    },
    {
      "a": 2,
      "b": {
        "c": 2,
      },
    },
  ],
  "view": "
+---+---+---+
|   |   | b |
| # | a +---+
|   |   | c |
+---+---+---+
| 1 | 1 | 1 |
+---+---+---+
| 2 | 2 | 2 |
+---+---+---+",
}
`;

exports[`'handle empty arrays' > renders expected table > handle empty arrays 1`] = `
{
  "input": [
    {
      "tasks": {
        "a": [
          "aCx8zMrOjqW6K55TMokHD",
        ],
        "d": [],
        "n": [
          "UspYpi-8NwmZZR7FJprSb",
        ],
      },
    },
    {
      "tasks": {
        "a": [
          "gwT5xfbxgkPCq_VDyoBO3",
        ],
        "d": [],
        "n": [],
      },
    },
  ],
  "view": "
+---+------------------------------------------------------------------------------+
|   |                                    tasks                                     |
| # +---------------------------+---+----------------------------------------------+
|   |             n             | d |                      a                       |
+---+---+-----------------------+---+----------------------+-----------------------+
| 1 | 1 | UspYpi-8NwmZZR7FJprSb |   |          1           | aCx8zMrOjqW6K55TMokHD |
+---+---+-----------------------+---+----------------------+-----------------------+
| 2 |   |                       | 1 | gwT5xfbxgkPCq_VDyoBO3                        |
+---+---+-----------------------+---+----------------------------------------------+",
}
`;

exports[`'partially deduplicate objects with di…' > renders expected table > partially deduplicate objects with different headers 1`] = `
{
  "input": [
    {
      "character_id": "5428010618020694593",
      "item_id": "95",
    },
    {
      "character_id": "5428010618020694593",
      "item_id": "101",
      "stack_count": "4",
    },
  ],
  "view": "
+---+---------------------+-----------------------+
|   |    character_id     |        item_id        |
| 1 +---------------------+-----------------------+
|   | 5428010618020694593 |                    95 |
+---+---------------------+---------+-------------+
|   |    character_id     | item_id | stack_count |
| 2 +---------------------+---------+-------------+
|   | 5428010618020694593 |     101 |           4 |
+---+---------------------+---------+-------------+",
}
`;

exports[`'skip header deduplication' > renders expected table > skip header deduplication 1`] = `
{
  "input": [
    {
      "a": 1,
      "b": 2,
      "c": 3,
    },
    {
      "a": 4,
      "b": 5,
      "c": 6,
    },
  ],
  "view": "
+---+---+---+---+
|   | a | b | c |
| 1 +---+---+---+
|   | 1 | 2 | 3 |
+---+---+---+---+
|   | a | b | c |
| 2 +---+---+---+
|   | 4 | 5 | 6 |
+---+---+---+---+",
}
`;

exports[`'stabilize order of properties in arra…' > renders expected table > stabilize order of properties in arrays of objects 1`] = `
{
  "input": [
    {
      "a": 1,
      "b": 2,
    },
    {
      "a": 4,
      "c": 3,
    },
  ],
  "view": "
+---+---+---+
|   | b | a |
| 1 +---+---+
|   | 2 | 1 |
+---+---+---+
|   | a | c |
| 2 +---+---+
|   | 4 | 3 |
+---+---+---+",
}
`;

exports[`'work with unique headers' > renders expected table > work with unique headers 1`] = `
{
  "input": [
    {
      "description": "name of the ComponentStatus",
      "in": "path",
      "name": "name",
      "required": true,
      "type": "string",
      "uniqueItems": true,
    },
    {
      "$ref": "#/parameters/pretty-tJGM1-ng",
    },
  ],
  "view": "
+---+-----------------------------+------+------+----------+--------+-------------+
|   |         description         |  in  | name | required |  type  | uniqueItems |
| 1 +-----------------------------+------+------+----------+--------+-------------+
|   | name of the ComponentStatus | path | name | true     | string | true        |
+---+-----------------------------+------+------+----------+--------+-------------+
|   |                                    $ref                                     |
| 2 +-----------------------------------------------------------------------------+
|   | #/parameters/pretty-tJGM1-ng                                                |
+---+-----------------------------------------------------------------------------+",
}
`;

exports[`makeTreeFactory > Should create tree for primitives > primitive 12345 1`] = `
{
  "input": 12345,
  "view": "
+-------+
| 12345 |
+-------+",
}
`;

exports[`makeTreeFactory > Should create tree for primitives > primitive abcde 1`] = `
{
  "input": "abcde",
  "view": "
+-------+
| abcde |
+-------+",
}
`;

exports[`makeTreeFactory > Should create tree for primitives > primitive false 1`] = `
{
  "input": false,
  "view": "
+-------+
| false |
+-------+",
}
`;
